Fixed issue with image too large inside the figure with class name img-principal-article

--- a/public/css/principal.css
+++ b/public/css/principal.css
@@ -45,6 +45,10 @@ figure.img-principal-article{
   height: 250px;
 }
 
+figure.img-principal-article img{
+  width: 100%;
+}
+
 footer.principal{
   margin: 70px 0 10px 0;
 }
